fixed overflow tabs highlight issue

--- a/components/tabs/tabs.less
+++ b/components/tabs/tabs.less
@@ -53,8 +53,7 @@
                 padding:12px 6px 8px;
                 display:block;
                 &:hover,
-                &:active,
-                &:focus {
+                &:active {
                     background:@dell-highlight-blue;
                 }
             }
